# tagr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  deny.toml  dist-workspace.toml
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
config/: keybinds.toml.example
docs/: cli-reference.md  custom-frontend-guide.md
examples/: browse_demo.rs  custom_frontend.rs
src/: cli.rs  config.rs  lib.rs  main.rs  testing.rs
src/browse/: actions.rs  filter.rs  mod.rs  models.rs  query.rs  session.rs  ui.rs
src/commands/: alias.rs  browse.rs  bulk.rs  cleanup.rs  filter.rs  list.rs  mod.rs  note.rs  search.rs  tag.rs  tags.rs
src/commands/bulk/: batch.rs  core.rs  delete.rs  mapping.rs  mod.rs  propagate.rs  tag_ops.rs  tests.rs  transform.rs
src/completions/: cache.rs  candidates.rs  completers.rs  mod.rs  traits.rs
src/config/: mod.rs  setup.rs
src/db/: error.rs  error_tests.rs  mod.rs  query.rs  types.rs  types_tests.rs
src/discovery/: mod.rs  traits.rs
src/filters/: error.rs  mod.rs  operations.rs  types.rs
src/keybinds/: actions.rs  config.rs  executor.rs  help.rs  metadata.rs  mod.rs  prompts.rs
src/my_db/: db  snap.0000000000000084
src/output/: mod.rs
src/patterns/: error.rs  files.rs  mod.rs  tags.rs
src/preview/: error.rs  generator.rs  mod.rs  provider.rs  types.rs
src/schema/: error.rs  mod.rs  types.rs
src/search/: browse.rs  error.rs  error_tests.rs  filter.rs  hierarchy.rs  mod.rs  state.rs  traits.rs
src/ui/: error.rs  input.rs  mock.rs  mod.rs  output.rs  skim_adapter.rs  traits.rs  types.rs
src/ui/ratatui_adapter/: events.rs  finder.rs  mod.rs  state.rs  styled_preview.rs  theme.rs
src/ui/ratatui_adapter/widgets/: confirm_dialog.rs  details_modal.rs  help_bar.rs  help_overlay.rs  item_list.rs  mod.rs  preview_pane.rs  refine_search_overlay.rs  search_bar.rs  status_bar.rs  tag_tree.rs  text_input.rs
src/vtags/: cache.rs  config.rs  evaluator.rs  mod.rs  parser.rs  types.rs
tests/: integration_test.rs
