[package]
name = "tagr"
description = "A fast, tag-based file organizer and search tool for the command line."
version = "0.2.0"
authors = ["Rainer Kildal <rkildal@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/xerinox/tagr"
keywords = ["search", "tag", "organization", "cli"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
colored = "2.1"
config = "0.15.18"
dialoguer = "0.11"
dirs = "6.0.0"
glob = "0.3"
regex = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
skim = "0.20.5"
sled = "0.34.7"
thiserror = "2.0.17"
toml = "0.8"
