[package]
name = "tagr"
description = "A fast, tag-based file organizer and search tool for the command line."
version = "0.4.0"
authors = ["Rainer Kildal <rkildal@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/xerinox/tagr"
keywords = ["search", "tag", "organization", "cli"]

[features]
default = ["syntax-highlighting"]
syntax-highlighting = ["dep:syntect"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
colored = "2.1"
config = "0.15.18"
dialoguer = "0.11"
dirs = "6.0.0"
glob = "0.3"
moka = { version = "0.12", features = ["sync"] }
byte-unit = "5.1"
rayon = "1.7"
regex = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
skim = "0.20.5"
sled = "0.34.7"
syntect = { version = "5.2", optional = true }
thiserror = "2.0.17"
toml = "0.8"
